<resources>
    <string name="app_name">AAD44.0 Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="background_image">background</string>
    <string name="back_button">back button</string>
    <string name="google_logo">google logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="submit">Submit</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="close_buttton">close buttton</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="top_learner_icon">top Learner icon</string>
    <string name="skilled_leader_badge">skilled leader badge</string>
</resources>