<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="42dp"
    android:orientation="vertical">

<ImageView
    android:id="@+id/cancelSubmit"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:src="@drawable/ic_baseline_cancel_24"
    android:layout_gravity="end"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:contentDescription="@string/close_buttton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="2dp"
        android:text="@string/yes"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:cornerRadius="10dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"/>

</LinearLayout>