<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.submit.SubmitActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:contentDescription="@string/background_image"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_centerVertical="true"
                app:tint="@color/white"
                android:contentDescription="@string/back_button"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:layout_toEndOf="@id/goBack"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="42dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/google_logo"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/title"
                android:background="@drawable/view_shape"
                android:layout_marginTop="@dimen/medium_padding"/>
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginBottom="@dimen/extra_large_margin"
                    android:baselineAligned="false"
                    android:orientation="horizontal">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/standard_margin"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:layout_weight="1"
                        android:background="@drawable/text_input_background"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:padding="@dimen/standard_padding"
                        android:textCursorDrawable="@drawable/text_input_cursor"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/standard_margin"
                        android:layout_weight="1"
                        android:background="@drawable/text_input_background"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:padding="@dimen/standard_padding"
                        android:textCursorDrawable="@drawable/text_input_cursor"
                        android:textStyle="bold" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:layout_marginBottom="@dimen/extra_large_margin"
                    android:background="@drawable/text_input_background"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/standard_padding"
                    android:textCursorDrawable="@drawable/text_input_cursor"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large_margin"
                    android:layout_marginEnd="@dimen/large_margin"
                    android:layout_marginBottom="@dimen/extra_large_margin"
                    android:background="@drawable/text_input_background"
                    android:hint="@string/project_on_github_link"
                    android:inputType="textImeMultiLine"
                    android:padding="@dimen/standard_padding"
                    android:textCursorDrawable="@drawable/text_input_cursor"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    app:backgroundTint="@null"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/view_button_shape"
                    android:paddingStart="@dimen/high_padding"
                    android:paddingEnd="@dimen/high_padding"
                    android:paddingTop="@dimen/medium_padding"
                    android:paddingBottom="@dimen/medium_padding"
                    android:layout_marginTop="@dimen/standard_margin"
                    app:elevation="8dp"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</RelativeLayout>